--- a/frontend/home/home.html
+++ b/frontend/home/home.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <link rel="stylesheet" href="./home/style.css" />
+        <title>We code lab</title>
     </head>
     <body>
         <h1>hello ahihi</h1>
+        <script src="./home/script.js"></script>
     </body>
 </html>
