--- a/frontend/home/home.html
+++ b/frontend/home/home.html
@@ -4,11 +4,17 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./home/style.css" />
-        <title>We code lab</title>
+        <link rel="stylesheet" href="./style.css" />
+        <title>Wecodelab</title>
     </head>
     <body>
-        <h1>hello ahihi</h1>
-        <script src="./home/script.js"></script>
+        <header>
+            <div id="logo"><img src="./resource/logo.png" alt="" /></div>
+            <div id="menu"></div>
+        </header>
+        <main>
+            <div>Thời gian phục vụ còn: <span id="timeleft"></span></div>
+        </main>
+        <script src="./script.js"></script>
     </body>
 </html>
