--- a/frontend/home/home.html
+++ b/frontend/home/home.html
@@ -14,6 +14,7 @@
         </header>
         <main>
             <div>Thời gian phục vụ còn: <span id="timeleft"></span></div>
+            <a href="/music">nghe nhạc</a>
         </main>
         <script src="./script.js"></script>
     </body>
